<resources>
    <string name="app_name">Notifier</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="history">History</string>

    <string name="notification_title">Notification Title</string>
    <string name="notification_text">Notification Text</string>
    <string name="create_notification">Create Notification</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="channel_id">NOTIFIER_ID</string>
    <string name="channel_name">Notifier</string>
    <string name="channel_description">Notifier created notifications</string>
    <string name="notification_color">Notification Color</string>
    <string name="color_picker">Color Picker</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="re_create">Re-Create</string>
</resources>